--- a/pdf-detector/manifest.json
+++ b/pdf-detector/manifest.json
@@ -4,17 +4,16 @@
   "description": "detect pdf and html...",
   "version": "1.0",
   "browser_action": {},
-  "permissions": [
-  ],
+  "permissions": ["tabs"],
   "background": {
-    "scripts": ["eventPage.js"],
+    "scripts": ["background.js"],
     "persistent": false
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "js": ["content.js"]
     }
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval' https://www.gstatic.com/ https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'"
 }
